# ia-reviews

./: .env  .env.example  Cargo.toml  docker-compose.yml
.github/workflows/: server.yml
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240208_202313_users_table.rs
src/: error.rs  main.rs
src/controllers/: authentication.rs
src/repository/: user.rs
src/routes/: auth.rs  mod.rs
src/services/: user.rs
src/types/: user.rs
