[package]
name = "rate-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["migration/", 'entity']

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
dotenv = "0.15.0"
sea-orm = { version = "0.12.14", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"

[workspace.dependencies]
sea-orm-migration = "0.12.14"
sea-orm = "0.12.14"
serde = "1.0.196"
